--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install aquacrop`"
+    "`pip install nbdev_qq_test`"
    ]
   },
   {
@@ -80,7 +80,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
