--- a/nbs/02_timestep.ipynb
+++ b/nbs/02_timestep.ipynb
@@ -51,9 +51,9 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "from aquacrop.solution import *\n",
-    "from aquacrop.initialize import calculate_HI_linear, calculate_HIGC\n",
-    "from aquacrop.classes import *\n",
+    "from nbdev_qq_test.solution import *\n",
+    "from nbdev_qq_test.initialize import calculate_HI_linear, calculate_HIGC\n",
+    "from nbdev_qq_test.classes import *\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
@@ -964,21 +964,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   }
  },
  "nbformat": 4,
