--- a/nbs/03_solution.ipynb
+++ b/nbs/03_solution.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "from aquacrop.classes import *\n",
+    "from nbdev_qq_test.classes import *\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from numba import njit"
@@ -6137,7 +6137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
