--- a/nbs/06_lars.ipynb
+++ b/nbs/06_lars.ipynb
@@ -69,8 +69,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from aquacrop.core import *\n",
-    "from aquacrop.classes import *\n",
+    "from nbdev_qq_test.core import *\n",
+    "from nbdev_qq_test.classes import *\n",
     "import seaborn as sns"
    ]
   },
@@ -839,7 +839,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
